--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token" : "NDk0NTM0OTU3MzczNTg3NDU2.Do_jGQ.eKMYJ4dfGMCct8f9d7Rh4_zKdoE",
+    "token" : "NDkxMjY5ODQ5NjkyMjQxOTIx.DpT0lw.Sj2aT9taXwsEeUmxGQZEsCQnywY",
 
     "prefix" : "!"
 }
